--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <link rel="stylesheet" href="./files(1)/styles/modal-9.css">
         <link rel="stylesheet" href="./files(1)/styles/popup-6.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="./inferno_files/dom_mod.js" type="module"></script>
+        <!-- <script src="./inferno_files/dom_mod.js" type="module"></script> -->
         <style>
                 .hiddenn {
                         /* display: none;
